--- a/packages/firebird/package.json
+++ b/packages/firebird/package.json
@@ -37,8 +37,8 @@
       "access": "public"
     },
     "dependencies": {
-      "@sequelize/core": "workspace:*",
-      "@sequelize/utils": "workspace:*",
+      "@sequelize/core": "^7.0.0",
+      "@sequelize/utils": "^7.0.0",
       "dayjs": "^1.11.10",
       "lodash": "^4.17.21",
       "firebird": "^1.3.0",  
