--- a/packages/firebird/package.json
+++ b/packages/firebird/package.json
@@ -37,8 +37,8 @@
       "access": "public"
     },
     "dependencies": {
-      "@sequelize/core": "^7.0.0",
-      "@sequelize/utils": "^7.0.0",
+      "@sequelize/core": "https://github.com/MahmoudTL/sequelize/tree/preprod/packages/core",
+      "@sequelize/utils": "https://github.com/MahmoudTL/sequelize/tree/preprod/packages/utils",
       "dayjs": "^1.11.10",
       "lodash": "^4.17.21",
       "firebird": "^1.3.0",  
