--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "devDependencies": {
     "@ephys/eslint-config-typescript": "20.1.4",
     "@rushstack/eslint-patch": "1.10.4",
-    "@sequelize/utils":"https://github.com/MahmoudTL/sequelize/tree/preprod/packages/utils",
+    "@sequelize/utils":"workspace",
     "@types/chai": "4.3.20",
     "@types/lodash": "4.17.14",
     "@types/mocha": "10.0.10",
